--- a/brixtonenergybyday.html
+++ b/brixtonenergybyday.html
@@ -21,7 +21,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
     <script src="http://d23cj0cdvyoxg0.cloudfront.net/xivelyjs-1.0.3.min.js"></script>  
 
-    <title>Brixton Energy Solar 1</title>
+    <title>Brite Energy Solar 1</title>
   </head>
 
   <body>
@@ -29,7 +29,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Brixton Energy Solar 1</h1>
+          <h1 id="project_title">Brite Energy Solar 1</h1>
 h2>
         </header>
     </div>
