--- a/brixtonenergy.html
+++ b/brixtonenergy.html
@@ -60,7 +60,7 @@ h2>
 <script>
 
 // Set your API key first  
-xively.setKey( "QjgNPVyfrL8mq0ulvTk69cfkY0RPTVE8SWEA6Jr7SnjdfOBY" );  
+xively.setKey( "ZKPRcyV1nMJUMlifIlWG9nWxcsO95Hy8hdCM96BSg92cmHGr" );  
 
 var startOfYesterday = moment().subtract("day", 1).startOf('day');
 var endOfYesterday = moment().subtract("hour", 3).startOf('day');
@@ -75,7 +75,7 @@ var query = {
   limit: 1000,
 };
 
-xively.datastream.history( "62472", "power", query, loadData);  
+xively.datastream.history( "2071969001", "Solar_meteo", query, loadData);  
 
 function loadData(data) {  
   var unit = data.unit.label;
