--- a/test.html
+++ b/test.html
@@ -80,11 +80,11 @@ xively.datastream.history( "2017146907", "TEMPERATURE", query, loadData);
 function loadData(data) {  
   var unit = data.unit.label;
   var series = [];
-  var filtedData = data.datapoints;
-  for (var i=0; i < filtedData.length; i++ ) {
-    var date = moment(filtedData[i].at);
-    var value = parseInt(filtedData[i].value);
-    series[i] = {x: date.unix(), y: value};
+ // var filtedData = data.datapoints;
+ // for (var i=0; i < filtedData.length; i++ ) {
+//    var date = moment(filtedData[i].at);
+//    var value = parseInt(filtedData[i].value);
+//    series[i] = {x: date.unix(), y: value};
   }
   drawGraph(series, unit);
 }
